--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@
 
                         <label for="">Name</label>
 
-                        <div class="nameheadline"> Chris Longjohn Silver</div>
+                        <div class="nameheadline"> Drizzt Do Urden</div>
                         <label for="">Informations</label>
                         <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
                             invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
@@ -306,7 +306,7 @@
 
                         <label for="">Name</label>
 
-                        <div class="nameheadline"> Chris Longjohn Silver</div>
+                        <div class="nameheadline"> Mystical Shadow</div>
                         <label for="">Informations</label>
                         <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
                             invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
@@ -398,7 +398,7 @@
 
                         <label for="">Name</label>
 
-                        <div class="nameheadline"> Chris Longjohn Silver</div>
+                        <div class="nameheadline">Coree Ann Der</div>
                         <label for="">Informations</label>
                         <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
                             invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
