--- a/src/index.html
+++ b/src/index.html
@@ -216,9 +216,7 @@
 
                         <div class="nameheadline"> Drizzt Do Urden</div>
                         <label for="">Informations</label>
-                        <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                            et justo duo dolores et ea rebum.</h3>
+                        <h3>34 Jahre alt, Lehrer</h3>
                     </div>
                     <div class="right-side">
 
@@ -308,9 +306,7 @@
 
                         <div class="nameheadline"> Mystical Shadow</div>
                         <label for="">Informations</label>
-                        <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                            et justo duo dolores et ea rebum.</h3>
+                        <h3>30 Jahre alt, Sozialpädagoge</h3>
                     </div>
                     <div class="right-side">
 
@@ -400,9 +396,7 @@
 
                         <div class="nameheadline">Coree Ann Der</div>
                         <label for="">Informations</label>
-                        <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-                            et justo duo dolores et ea rebum.</h3>
+                        <h3>32 Jahre alt, Gabelstaplerfahrer</h3>
                     </div>
                     <div class="right-side">
 
