--- a/src/index.html
+++ b/src/index.html
@@ -121,8 +121,8 @@
   
 
     <div class="OffsetContainer contentwrapper">
-        <div class="headline1">SPIEGEL Auswertung Mediennutzung</div>
-        <div class="headline2">Nutzung von Medien über den Tagsverlauf</div>
+        <h1>SPIEGEL Auswertung Mediennutzung</h1>
+        <h2>Nutzung von Medien über den Tagsverlauf</h2>
         <div class="carousel">
 
             <div class="carousel-buttons">
@@ -422,10 +422,10 @@
                     <div class="right-side">
                     </div>
             </div>
-                <h2>Mediennutzung</h2>
+                <h2 id="lol">Mediennutzung</h2>
                      
 
-                <div style="width:90%"><canvas id="mediausage"></canvas></div>
+                <div><canvas id="mediausage"></canvas></div>
             </div>
         </div>
 
